--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://meloonly.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://meloonly.com
+title: I konw I know
+subtitle: justice will be done.
+author: meloonly
 simple_search: http://google.com/search
 description:
 
